@@ -7,6 +7,7 @@
 5. If showing jumplist for mixed folders and files, draw jumplist items for
    folders slighttly dimmer than files.
 6. Fix album not appearing in favourites, if it is the last item.
+7. When building SlimBrowse commands, don't add 'null' or 'undefined' values.
 
 0.9.3
 -----
